// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessSelectorField component should render default view 1`] = `
<GenericSelectField
  error={false}
  errorText=""
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": 8,
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Open Access",
        "value": 453619,
      },
      Object {
        "text": "Mediated Access",
        "value": 453618,
      },
    ]
  }
  label="Access selector field"
  locale={
    Object {
      "label": "Access selector field",
    }
  }
  onChange={[MockFunction]}
  value={8}
/>
`;

exports[`AccessSelectorField component should render error and error message 1`] = `
<GenericSelectField
  error={false}
  errorText=""
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": 8,
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Open Access",
        "value": 453619,
      },
      Object {
        "text": "Mediated Access",
        "value": 453618,
      },
    ]
  }
  label="Access selector field"
  locale={
    Object {
      "label": "Access selector field",
    }
  }
  meta={
    Object {
      "error": "This field is required",
    }
  }
  onChange={[MockFunction]}
  value={8}
/>
`;
